<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmaDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:text="@string/form_nombre"/>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/tvFdn"
       android:layout_below="@id/tvNombre"
       android:text="@string/form_fecha"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTelefono"
        android:layout_below="@id/tvFdn"
        android:text="@string/form_telefono"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:layout_below="@id/tvTelefono"
        android:text="@string/form_email"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescripcion"
        android:layout_below="@id/tvEmail"
        android:text="@string/form_descripcion"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescripcion"
        android:onClick="Editar"
        android:text="@string/btn_editar" />
</RelativeLayout>