<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/formNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_nombre"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:id="@+id/formFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/formTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_telefono"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/formEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/formDescripcion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/form_descripcion"
                            android:importantForAutofill="no"
                            android:inputType="textShortMessage" />

                        <Button
                            android:id="@+id/formBoton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="Siguiente"
                            android:text="@string/btn_siguiente"
                            android:theme="@style/Boton" />
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>